Upgraded scala and more deprecated dependencies